--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -19,12 +19,12 @@ dependencies:
       - aiosignal==1.3.2
       - aisuite==0.1.7
       - albucore==0.0.23
-      - albumentations==1.4.24
+      - albumentations==2.0.1
       - altair==5.5.0
       - annotated-types==0.7.0
       - ansicon==1.89.0
-      - anthropic==0.42.0
-      - anyio==4.7.0
+      - anthropic==0.45.0
+      - anyio==4.8.0
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
@@ -32,7 +32,7 @@ dependencies:
       - asgiref==3.8.1
       - asttokens==3.0.0
       - async-lru==2.0.4
-      - attrs==24.3.0
+      - attrs==25.1.0
       - azure-core==1.32.0
       - azure-identity==1.19.0
       - babel==2.16.0
@@ -42,14 +42,14 @@ dependencies:
       - bleach==6.2.0
       - blessed==1.20.0
       - blinker==1.9.0
-      - braincube-connector==2.6.0
+      - braincube-connector==2.7.0
       - build==1.2.2.post1
-      - cachetools==5.5.0
+      - cachetools==5.5.1
       - certifi==2024.12.14
       - cffi==1.17.1
       - charset-normalizer==3.4.1
       - chroma-hnswlib==0.7.6
-      - chromadb==0.6.0
+      - chromadb==0.6.3
       - click==8.1.8
       - click-default-group==1.2.4
       - colorama==0.4.6
@@ -60,11 +60,11 @@ dependencies:
       - cycler==0.12.1
       - cython==3.0.11
       - dataclasses-json==0.6.7
-      - db-dtypes==1.3.1
+      - db-dtypes==1.4.0
       - debugpy==1.8.12
       - decorator==5.1.1
       - defusedxml==0.7.1
-      - deprecated==1.2.15
+      - deprecated==1.2.17
       - dirtyjson==1.0.8
       - diskcache==5.6.3
       - distro==1.9.0
@@ -74,44 +74,44 @@ dependencies:
       - durationpy==0.9
       - email-validator==2.2.0
       - eval-type-backport==0.2.2
-      - executing==2.1.0
-      - fastapi==0.115.6
+      - executing==2.2.0
+      - fastapi==0.115.7
       - fastavro==1.10.0
       - fastjsonschema==2.21.1
-      - filelock==3.16.1
+      - filelock==3.17.0
       - filetype==1.2.0
       - flake8==7.1.1
       - flask==3.1.0
-      - flatbuffers==24.12.23
-      - fonttools==4.55.3
+      - flatbuffers==25.1.24
+      - fonttools==4.55.6
       - fpdf2==2.8.2
       - fqdn==1.5.1
       - frozenlist==1.5.0
       - fsspec==2024.12.0
-      - gitdb==4.0.11
-      - gitpython==3.1.43
-      - google-ai-generativelanguage==0.6.10
+      - gitdb==4.0.12
+      - gitpython==3.1.44
+      - google-ai-generativelanguage==0.6.15
       - google-api-core==2.24.0
       - google-api-python-client==2.135.0
-      - google-auth==2.37.0
+      - google-auth==2.38.0
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.1
-      - google-cloud-aiplatform==1.75.0
-      - google-cloud-bigquery==3.27.0
+      - google-cloud-aiplatform==1.78.0
+      - google-cloud-bigquery==3.29.0
       - google-cloud-compute==1.23.0
       - google-cloud-core==2.4.1
       - google-cloud-pipeline-components==2.18.0
       - google-cloud-resource-manager==1.14.0
-      - google-cloud-secret-manager==2.22.0
+      - google-cloud-secret-manager==2.22.1
       - google-cloud-storage==2.19.0
       - google-cloud-vision==3.9.0
       - google-crc32c==1.6.0
-      - google-genai==0.3.0
-      - google-generativeai==0.8.3
+      - google-genai==0.6.0
+      - google-generativeai==0.8.4
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.66.0
       - greenlet==3.1.1
-      - grpc-google-iam-v1==0.13.1
+      - grpc-google-iam-v1==0.14.0
       - grpcio==1.69.0
       - grpcio-status==1.62.3
       - h11==0.14.0
@@ -121,13 +121,13 @@ dependencies:
       - httptools==0.6.4
       - httpx==0.27.2
       - httpx-sse==0.4.0
-      - huggingface-hub==0.27.0
+      - huggingface-hub==0.27.1
       - humanfriendly==10.0
       - idna==3.10
       - ijson==3.3.0
-      - imageio==2.36.1
+      - imageio==2.37.0
       - importlib-metadata==8.4.0
-      - importlib-resources==6.5.1
+      - importlib-resources==6.5.2
       - imutils==0.5.4
       - iniconfig==2.0.0
       - intel-cmplr-lib-ur==2025.0.4
@@ -138,8 +138,8 @@ dependencies:
       - ipython-genutils==0.2.0
       - isoduration==20.11.0
       - itsdangerous==2.2.0
-      - jax==0.4.38
-      - jaxlib==0.4.38
+      - jax==0.5.0
+      - jaxlib==0.5.0
       - jedi==0.19.2
       - jinja2==3.1.5
       - jinxed==1.3.0
@@ -179,7 +179,7 @@ dependencies:
       - lazy-loader==0.4
       - lightning==2.5.0
       - lightning-utilities==0.11.9
-      - llama-cloud==0.1.7
+      - llama-cloud==0.1.10
       - llama-cpp-python==0.3.5
       - llama-index==0.11.23
       - llama-index-agent-openai==0.3.4
@@ -195,37 +195,37 @@ dependencies:
       - llama-index-question-gen-openai==0.2.0
       - llama-index-readers-file==0.3.0
       - llama-index-readers-llama-parse==0.3.0
-      - llama-parse==0.5.19
+      - llama-parse==0.5.20
       - llamaindex-py-client==0.1.19
-      - llm==0.19.1
+      - llm==0.20
       - llm-claude-3==0.10
-      - llm-gemini==0.8
+      - llm-gemini==0.9
       - llvmlite==0.44.0
       - lmdb==1.6.2
       - lxml==5.3.0
       - markdown==3.7
       - markdown-it-py==3.0.0
       - markupsafe==3.0.2
-      - marshmallow==3.23.2
+      - marshmallow==3.26.0
       - matplotlib==3.10.0
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mdurl==0.1.2
-      - mistralai==1.2.5
+      - mistralai==1.4.0
       - mistune==3.1.0
       - mkl==2025.0.1
-      - ml-dtypes==0.5.0
-      - mmh3==5.0.1
+      - ml-dtypes==0.5.1
+      - mmh3==5.1.0
       - monotonic==1.6
-      - more-itertools==10.3.0
+      - more-itertools==10.5.0
       - mpmath==1.3.0
       - msal==1.31.1
       - msal-extensions==1.2.0
       - multidict==6.1.0
       - mypy-extensions==1.0.0
-      - narwhals==1.20.1
+      - narwhals==1.23.0
       - nbclient==0.10.2
-      - nbconvert==7.16.4
+      - nbconvert==7.16.5
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
       - networkx==3.4.2
@@ -233,18 +233,18 @@ dependencies:
       - nodeenv==1.9.1
       - notebook==7.3.2
       - notebook-shim==0.2.4
-      - numba==0.60.0
+      - numba==0.61.0
       - numpy==1.26.4
       - oauthlib==3.2.2
-      - ollama==0.4.5
+      - ollama==0.4.7
       - onnxruntime==1.20.1
-      - openai==1.58.1
-      - opencv-contrib-python==4.10.0.84
-      - opencv-python==4.10.0.84
-      - opencv-python-headless==4.10.0.84
-      - openinference-instrumentation==0.1.20
+      - openai==1.60.1
+      - opencv-contrib-python==4.11.0.86
+      - opencv-python==4.11.0.86
+      - opencv-python-headless==4.11.0.86
+      - openinference-instrumentation==0.1.21
       - openinference-instrumentation-langchain==0.1.29
-      - openinference-instrumentation-llama-index==3.1.2
+      - openinference-instrumentation-llama-index==3.1.3
       - openinference-instrumentation-openai==0.1.18
       - openinference-semantic-conventions==0.1.12
       - opentelemetry-api==1.27.0
@@ -260,52 +260,52 @@ dependencies:
       - opentelemetry-semantic-conventions==0.48b0
       - opentelemetry-util-http==0.48b0
       - opt-einsum==3.4.0
-      - orjson==3.10.13
+      - orjson==3.10.15
       - overrides==7.7.0
       - packaging==23.2
       - pandas==2.2.3
-      - pandas-gbq==0.26.0
+      - pandas-gbq==0.26.1
       - pandocfilters==1.5.1
       - parameterized==0.9.0
       - parso==0.8.4
       - persist-queue==1.0.0
-      - pillow==11.0.0
-      - pip==24.3.1
+      - pillow==11.1.0
+      - pip==25.0
       - pipdeptree==2.23.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
       - plyfile==1.1
       - portalocker==2.10.1
-      - posthog==3.7.4
+      - posthog==3.10.0
       - prometheus-client==0.21.1
-      - prompt-toolkit==3.0.48
+      - prompt-toolkit==3.0.50
       - propcache==0.2.1
       - proto-plus==1.25.0
       - protobuf==4.25.5
       - psutil==6.1.1
       - pure-eval==0.2.3
       - puremagic==1.28
-      - pyarrow==18.1.0
+      - pyarrow==19.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
       - pycparser==2.22
-      - pydantic==2.10.4
+      - pydantic==2.10.6
       - pydantic-core==2.27.2
       - pydantic-settings==2.7.1
-      - pydata-google-auth==1.9.0
+      - pydata-google-auth==1.9.1
       - pydeck==0.9.1
       - pyflakes==3.2.0
-      - pygments==2.18.0
+      - pygments==2.19.1
       - pyjwt==2.10.1
       - pylucidio==2.4
       - pyparsing==3.2.1
-      - pypdf==5.1.0
+      - pypdf==5.2.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
       - pyqtree==1.0.0
       - pyreadline3==3.5.4
-      - pyright==1.1.391
+      - pyright==1.1.392
       - pyserial==3.5
       - pytest==8.3.4
       - python-dateutil==2.9.0.post0
@@ -320,7 +320,7 @@ dependencies:
       - pyzbar==0.1.9
       - pyzmq==26.2.0
       - qrcode==8.0
-      - referencing==0.35.1
+      - referencing==0.36.2
       - regex==2024.11.6
       - requests==2.32.3
       - requests-oauthlib==2.0.0
@@ -330,24 +330,24 @@ dependencies:
       - rich==13.9.4
       - rpds-py==0.22.3
       - rsa==4.9
-      - ruff==0.8.4
-      - safetensors==0.4.5
-      - scikit-image==0.25.0
-      - scikit-learn==1.6.0
-      - scipy==1.14.1
+      - ruff==0.9.3
+      - safetensors==0.5.2
+      - scikit-image==0.25.1
+      - scikit-learn==1.6.1
+      - scipy==1.15.1
       - segment-anything==1.0
       - send2trash==1.8.3
-      - sentence-transformers==3.3.1
-      - setuptools==75.6.0
+      - sentence-transformers==3.4.0
+      - setuptools==75.8.0
       - shapely==2.0.6
       - shellingham==1.5.4
       - simsimd==6.2.1
       - six==1.17.0
-      - smmap==5.0.1
+      - smmap==5.0.2
       - snakeviz==2.2.2
       - sniffio==1.3.1
       - soupsieve==2.6
-      - sqlalchemy==2.0.36
+      - sqlalchemy==2.0.37
       - sqlite-fts4==1.0.3
       - sqlite-migrate==0.1b0
       - sqlite-utils==3.38
@@ -363,12 +363,12 @@ dependencies:
       - tenacity==8.5.0
       - terminado==0.18.1
       - threadpoolctl==3.5.0
-      - tifffile==2024.12.12
-      - tiktoken==0.7.0
+      - tifffile==2025.1.10
+      - tiktoken==0.8.0
       - tinycss2==1.4.0
       - tokenizers==0.21.0
       - toml==0.10.2
-      - tomli-w==1.1.0
+      - tomli-w==1.2.0
       - tomlkit==0.13.2
       - torch==2.4.1+cu124
       - torchaudio==2.4.1+cu124
@@ -377,29 +377,30 @@ dependencies:
       - tornado==6.4.2
       - tqdm==4.67.1
       - traitlets==5.14.3
-      - transformers==4.47.1
+      - transformers==4.48.1
       - typer==0.15.1
       - types-python-dateutil==2.9.0.20241206
       - typing-extensions==4.12.2
       - typing-inspect==0.9.0
-      - tzdata==2024.2
+      - tzdata==2025.1
       - umf==0.9.0
       - uri-template==1.3.0
       - uritemplate==4.1.1
       - urllib3==1.26.20
       - uvicorn==0.34.0
       - watchdog==6.0.0
-      - watchfiles==1.0.3
+      - watchfiles==1.0.4
       - wcwidth==0.2.13
       - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - websockets==14.1
+      - websockets==14.2
       - werkzeug==3.1.3
       - wheel==0.45.1
-      - wrapt==1.17.0
-      - xlsxwriter==3.2.0
+      - wrapt==1.17.2
+      - xlsxwriter==3.2.1
       - yarl==1.18.3
       - yoctopuce==2.0.63620
       - zipp==3.21.0
+      - zstandard==0.23.0
 prefix: C:\Users\mmaresch\Miniconda3\envs\py_env_gpu
