--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -24,6 +24,7 @@ dependencies:
       - annotated-types==0.7.0
       - ansicon==1.89.0
       - anthropic==0.45.0
+      - antlr4-python3-runtime==4.9.3
       - anyio==4.8.0
       - arena-api==2.5.9
       - argon2-cffi==23.1.0
@@ -32,6 +33,7 @@ dependencies:
       - asgiref==3.8.1
       - asttokens==3.0.0
       - async-lru==2.0.4
+      - async-timeout==4.0.3
       - attrs==25.1.0
       - azure-core==1.32.0
       - azure-identity==1.19.0
@@ -47,7 +49,7 @@ dependencies:
       - cachetools==5.5.1
       - certifi==2024.12.14
       - cffi==1.17.1
-      - charset-normalizer==3.4.1
+      - charset-normalizer==2.1.1
       - chroma-hnswlib==0.7.6
       - chromadb==0.6.3
       - click==8.1.8
@@ -123,15 +125,17 @@ dependencies:
       - httpx-sse==0.4.0
       - huggingface-hub==0.27.1
       - humanfriendly==10.0
+      - hydra-core==1.3.2
       - idna==3.10
       - ijson==3.3.0
       - imageio==2.37.0
       - importlib-metadata==8.4.0
-      - importlib-resources==6.5.1
+      - importlib-resources==6.5.2
       - imutils==0.5.4
       - iniconfig==2.0.0
       - intel-cmplr-lib-ur==2025.0.4
       - intel-openmp==2025.0.4
+      - iopath==0.1.10
       - iprogress==0.4
       - ipykernel==6.29.5
       - ipython==8.31.0
@@ -237,6 +241,7 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - ollama==0.4.7
+      - omegaconf==2.3.0
       - onnxruntime==1.20.1
       - openai==1.60.1
       - opencv-contrib-python==4.11.0.86
@@ -270,7 +275,7 @@ dependencies:
       - parso==0.8.4
       - persist-queue==1.0.0
       - pillow==11.1.0
-      - pip==25.0
+      - pip==25.0.1
       - pipdeptree==2.23.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
@@ -296,9 +301,11 @@ dependencies:
       - pydata-google-auth==1.9.1
       - pydeck==0.9.1
       - pyflakes==3.2.0
+      - pygithub==2.5.0
       - pygments==2.19.1
       - pyjwt==2.10.1
       - pylucidio==2.4
+      - pynacl==1.5.0
       - pyparsing==3.2.1
       - pypdf==5.2.0
       - pypika==0.48.9
@@ -356,7 +363,7 @@ dependencies:
       - streamlit==1.41.1
       - stringzilla==3.11.3
       - striprtf==0.0.26
-      - sympy==1.13.3
+      - sympy==1.13.1
       - tabulate==0.9.0
       - tbb==2022.0.0
       - tcmlib==1.2.0
