--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -49,6 +49,7 @@ dependencies:
       - cachetools==5.5.1
       - certifi==2024.12.14
       - cffi==1.17.1
+      - chardet==5.2.0
       - charset-normalizer==2.1.1
       - chroma-hnswlib==0.7.6
       - chromadb==0.6.3
@@ -221,7 +222,7 @@ dependencies:
       - ml-dtypes==0.5.1
       - mmh3==5.1.0
       - monotonic==1.6
-      - more-itertools==10.5.0
+      - more-itertools==10.6.0
       - mpmath==1.3.0
       - msal==1.31.1
       - msal-extensions==1.2.0
@@ -305,6 +306,7 @@ dependencies:
       - pygments==2.19.1
       - pyjwt==2.10.1
       - pylucidio==2.4
+      - pymodbustcp==0.3.0
       - pynacl==1.5.0
       - pyparsing==3.2.1
       - pypdf==5.2.0
@@ -329,6 +331,7 @@ dependencies:
       - qrcode==8.0
       - referencing==0.36.2
       - regex==2024.11.6
+      - reportlab==4.3.1
       - requests==2.32.3
       - requests-oauthlib==2.0.0
       - requests-toolbelt==0.10.1
