--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -222,7 +222,7 @@ dependencies:
       - ml-dtypes==0.5.1
       - mmh3==5.1.0
       - monotonic==1.6
-      - more-itertools==10.6.0
+      - more-itertools==10.5.0
       - mpmath==1.3.0
       - msal==1.31.1
       - msal-extensions==1.2.0
@@ -342,6 +342,7 @@ dependencies:
       - rsa==4.9
       - ruff==0.9.3
       - safetensors==0.5.2
+      - sam2==1.1.0
       - scikit-image==0.25.1
       - scikit-learn==1.6.1
       - scipy==1.15.1
@@ -380,10 +381,10 @@ dependencies:
       - toml==0.10.2
       - tomli-w==1.2.0
       - tomlkit==0.13.2
-      - torch==2.4.1+cu124
-      - torchaudio==2.4.1+cu124
+      - torch==2.6.0+cu126
+      - torchaudio==2.6.0+cu126
       - torchmetrics==1.6.1
-      - torchvision==0.19.1+cu124
+      - torchvision==0.21.0+cu126
       - tornado==6.4.2
       - tqdm==4.67.1
       - traitlets==5.14.3
