--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -85,12 +85,13 @@ dependencies:
       - filetype==1.2.0
       - flake8==7.1.1
       - flask==3.1.0
-      - flatbuffers==25.1.24
+      - flatbuffers==25.2.10
       - fonttools==4.55.6
       - fpdf2==2.8.2
       - fqdn==1.5.1
       - frozenlist==1.5.0
       - fsspec==2024.12.0
+      - geojson==2.5.0
       - gitdb==4.0.12
       - gitpython==3.1.44
       - google-ai-generativelanguage==0.6.15
@@ -131,7 +132,7 @@ dependencies:
       - ijson==3.3.0
       - imageio==2.37.0
       - importlib-metadata==8.4.0
-      - importlib-resources==6.5.1
+      - importlib-resources==6.5.2
       - imutils==0.5.4
       - iniconfig==2.0.0
       - intel-cmplr-lib-ur==2025.0.4
@@ -202,9 +203,10 @@ dependencies:
       - llama-index-readers-llama-parse==0.3.0
       - llama-parse==0.5.20
       - llamaindex-py-client==0.1.19
-      - llm==0.20
+      - llm==0.23
       - llm-claude-3==0.10
       - llm-gemini==0.9
+      - llm-ollama==0.9.1
       - llvmlite==0.44.0
       - lmdb==1.6.2
       - lxml==5.3.0
@@ -254,6 +256,8 @@ dependencies:
       - openinference-instrumentation-llama-index==3.1.3
       - openinference-instrumentation-openai==0.1.18
       - openinference-semantic-conventions==0.1.12
+      - openmeteo-requests==1.3.0
+      - openmeteo-sdk==1.19.0
       - opentelemetry-api==1.27.0
       - opentelemetry-exporter-otlp==1.27.0
       - opentelemetry-exporter-otlp-proto-common==1.27.0
@@ -309,6 +313,7 @@ dependencies:
       - pylucidio==2.4
       - pymodbustcp==0.3.0
       - pynacl==1.5.0
+      - pyowm==3.3.0
       - pyparsing==3.2.1
       - pypdf==5.2.0
       - pypika==0.48.9
@@ -317,6 +322,7 @@ dependencies:
       - pyreadline3==3.5.4
       - pyright==1.1.392
       - pyserial==3.5
+      - pysocks==1.7.1
       - pytest==8.3.4
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
