--- a/architecture/Linux-aarch64/py_env_nia_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_nia_conda_env_export.yml
@@ -4,31 +4,82 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=51_gnu
+  - aom=3.6.0=h419075a_0
+  - blas=1.0=openblas
   - bzip2=1.0.8=h998d150_6
   - ca-certificates=2024.11.26=hd43f75c_0
+  - cairo=1.16.0=h537eab0_5
+  - dav1d=1.2.1=h998d150_0
   - expat=2.6.3=h419075a_0
+  - ffmpeg=6.1.1=he7f3711_0
+  - fontconfig=2.14.1=h652894d_2
+  - freetype=2.12.1=h6df46f4_0
+  - giflib=5.2.2=h998d150_0
+  - glib=2.78.4=h419075a_0
+  - glib-tools=2.78.4=h419075a_0
+  - graphite2=1.3.14=h22f4aa5_1
+  - harfbuzz=4.3.0=hfddee83_2
+  - icu=73.1=h419075a_0
+  - jinja2=3.1.4=py312hd43f75c_1
+  - jpeg=9e=h998d150_3
+  - lame=3.100=hfd63f10_0
+  - lcms2=2.12=h5246980_0
   - ld_impl_linux-aarch64=2.40=h48e3ba3_0
+  - leptonica=1.82.0=h5aee8ef_2
+  - lerc=3.0=h22f4aa5_0
+  - libabseil=20240116.2=cxx17_h419075a_0
+  - libarchive=3.6.2=h654c02d_3
+  - libdeflate=1.17=h998d150_1
   - libffi=3.4.4=h419075a_1
   - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h6e398d7_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libglib=2.78.4=hd439bcf_0
   - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h998d150_3
+  - libogg=1.3.5=h2f4d8fa_1
+  - libopenblas=0.3.21=hc2e42e2_0
+  - libopus=1.3.1=h998d150_1
+  - libpng=1.6.39=h998d150_0
+  - libprotobuf=4.25.3=h94b7715_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtheora=1.1.1=h2f4d8fa_3
+  - libtiff=4.5.1=h419075a_0
   - libuuid=1.41.5=h998d150_0
+  - libvorbis=1.3.7=hfd63f10_0
+  - libvpx=1.13.1=h419075a_0
+  - libwebp=1.3.2=he1bfee4_0
+  - libwebp-base=1.3.2=h998d150_1
+  - libxcb=1.15=h2f4d8fa_0
+  - libxml2=2.10.4=h6097fa9_2
+  - lz4-c=1.9.4=h419075a_1
+  - mpmath=1.3.0=py312hd43f75c_0
   - ncurses=6.4=h419075a_0
+  - numpy-base=1.26.4=py312h6f96b8b_0
+  - openh264=2.1.1=h549d06d_0
+  - openjpeg=2.5.2=ha2c532c_0
   - openssl=3.0.15=h998d150_0
+  - pcre2=10.42=hcfaa891_1
+  - pillow=11.0.0=py312h199e702_0
+  - pixman=0.40.0=h2f4d8fa_1
   - python=3.12.7=h8edadfe_0
   - readline=8.2=h998d150_0
   - sqlite=3.45.3=h998d150_0
+  - tesseract=5.2.0=h419075a_0
   - tk=8.6.14=h987d8db_0
+  - typing_extensions=4.11.0=py312hd43f75c_0
   - xz=5.4.6=h998d150_1
   - zlib=1.2.13=h998d150_1
+  - zstd=1.5.6=h6a09583_0
   - pip:
       - aiobotocore==2.15.2
       - aiohappyeyeballs==2.4.4
       - aiohttp==3.11.10
       - aioitertools==0.12.0
       - aiosignal==1.3.1
+      - antlr4-python3-runtime==4.9.3
       - anyio==4.7.0
-      - arena-api==2.5.9
+      - arena-api==2.7.1
       - argon2-cffi==23.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
@@ -45,16 +96,19 @@ dependencies:
       - cachetools==5.5.0
       - certifi==2024.8.30
       - cffi==1.17.1
+      - chardet==5.2.0
       - charset-normalizer==3.4.0
       - colorama==0.4.6
       - comm==0.2.2
       - contourpy==1.3.1
+      - cryptography==44.0.2
       - customtkinter==5.2.2
       - cycler==0.12.1
       - darkdetect==0.8.0
       - debugpy==1.8.9
       - decorator==5.1.1
       - defusedxml==0.7.1
+      - deprecated==1.2.18
       - docopt==0.6.2
       - exceptiongroup==1.2.2
       - executing==2.1.0
@@ -82,15 +136,18 @@ dependencies:
       - httpcore==1.0.7
       - httplib2==0.22.0
       - httpx==0.28.0
+      - huggingface-hub==0.29.3
+      - hydra-core==1.3.2
       - idna==3.10
       - imageio==2.36.1
       - importlib-metadata==8.5.0
+      - imutils==0.5.4
       - iniconfig==2.0.0
+      - iopath==0.1.10
       - ipykernel==6.29.5
       - ipython==8.30.0
       - isoduration==20.11.0
       - jedi==0.19.2
-      - jinja2==3.1.4
       - jmespath==1.0.1
       - joblib==1.4.2
       - json5==0.10.0
@@ -113,7 +170,7 @@ dependencies:
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
       - mistune==3.0.2
-      - mpmath==1.3.0
+      - mobile-sam==1.0
       - multidict==6.1.0
       - nbclient==0.10.1
       - nbconvert==7.16.4
@@ -121,7 +178,8 @@ dependencies:
       - nest-asyncio==1.6.0
       - networkx==3.4.2
       - notebook-shim==0.2.4
-      - numpy==2.1.3
+      - numpy==1.26.3
+      - omegaconf==2.3.0
       - opencv-contrib-python==4.10.0.84
       - opencv-python==4.10.0.84
       - opencv-python-headless==4.10.0.84
@@ -133,11 +191,12 @@ dependencies:
       - persist-queue==1.0.0
       - pexpect==4.9.0
       - pickleshare==0.7.5
-      - pillow==11.0.0
-      - pip==24.3.1
+      - pip==25.0.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
       - ply==3.11
+      - plyfile==1.1
+      - portalocker==3.1.1
       - prometheus-client==0.21.1
       - prompt-toolkit==3.0.48
       - propcache==0.2.1
@@ -152,13 +211,18 @@ dependencies:
       - pycodestyle==2.12.1
       - pycparser==2.22
       - pyflakes==3.2.0
+      - pygithub==2.6.1
       - pygments==2.18.0
+      - pyjwt==2.10.1
       - pylucidio==2.4
+      - pymage-size==1.7.1
+      - pynacl==1.5.0
       - pyparsing==3.2.0
       - pypng==0.20220715.0
       - pyqt6-sip==13.9.0
       - pyqtree==1.0.0
       - pyrsistent==0.20.0
+      - pyserial==3.5
       - python-dateutil==2.9.0.post0
       - python-json-logger==2.0.7
       - pytz==2024.2
@@ -168,6 +232,7 @@ dependencies:
       - pyzmq==26.2.0
       - qrcode==8.0
       - referencing==0.35.1
+      - reportlab==4.3.1
       - requests==2.32.3
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
@@ -175,6 +240,7 @@ dependencies:
       - rsa==4.9
       - ruff==0.8.2
       - s3fs==2024.10.0
+      - safetensors==0.5.3
       - scikit-image==0.24.0
       - scikit-learn==1.5.2
       - scipy==1.14.1
@@ -190,11 +256,13 @@ dependencies:
       - terminado==0.18.1
       - threadpoolctl==3.5.0
       - tifffile==2024.9.20
+      - timm==1.0.15
       - tinycss2==1.4.0
       - tomli==2.2.1
-      - torch==2.5.1
-      - torch-vision==0.1.6.dev0
+      - torch==2.6.0+cu126
+      - torchvision==0.21.0
       - tornado==6.4.2
+      - tqdm==4.67.1
       - traitlets==5.14.3
       - types-python-dateutil==2.9.0.20241206
       - typing-extensions==4.12.2
