--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -55,6 +55,7 @@ dependencies:
       - chromadb==0.6.3
       - click==8.1.8
       - click-default-group==1.2.4
+      - clr-loader==0.2.7.post0
       - colorama==0.4.6
       - coloredlogs==15.0.1
       - comm==0.2.2
@@ -101,6 +102,7 @@ dependencies:
       - google-auth-httplib2==0.2.0
       - google-auth-oauthlib==1.2.1
       - google-cloud-aiplatform==1.78.0
+      - google-cloud-artifact-registry==1.16.0
       - google-cloud-bigquery==3.29.0
       - google-cloud-compute==1.23.0
       - google-cloud-core==2.4.1
@@ -114,6 +116,7 @@ dependencies:
       - google-generativeai==0.8.4
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.66.0
+      - gputil==1.4.0
       - greenlet==3.1.1
       - grpc-google-iam-v1==0.14.0
       - grpcio==1.70.0
@@ -205,7 +208,7 @@ dependencies:
       - llamaindex-py-client==0.1.19
       - llm==0.23
       - llm-claude-3==0.10
-      - llm-gemini==0.9
+      - llm-gemini==0.16
       - llm-ollama==0.9.1
       - llvmlite==0.44.0
       - lmdb==1.6.2
@@ -225,7 +228,7 @@ dependencies:
       - mmh3==5.1.0
       - mobile-sam==1.0
       - monotonic==1.6
-      - more-itertools==10.5.0
+      - more-itertools==10.6.0
       - mpmath==1.3.0
       - msal==1.31.1
       - msal-extensions==1.2.0
@@ -280,8 +283,9 @@ dependencies:
       - parameterized==0.9.0
       - parso==0.8.4
       - persist-queue==1.0.0
+      - piconnect==0.12.1
       - pillow==11.1.0
-      - pip==25.0.1
+      - pip==25.1.1
       - pipdeptree==2.23.1
       - platformdirs==4.3.6
       - pluggy==1.5.0
@@ -311,6 +315,7 @@ dependencies:
       - pygments==2.19.1
       - pyjwt==2.10.1
       - pylucidio==2.4
+      - pymage-size==1.7.1
       - pymodbustcp==0.3.0
       - pynacl==1.5.0
       - pyowm==3.3.0
@@ -328,6 +333,7 @@ dependencies:
       - python-dotenv==1.0.1
       - python-json-logger==3.2.1
       - python-ulid==3.0.0
+      - pythonnet==3.0.5
       - pytorch-lightning==2.5.0
       - pytz==2024.2
       - pywin32==308
