--- a/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
@@ -35,8 +35,10 @@ dependencies:
       - braincube-connector==2.6.0
       - cachetools==5.5.0
       - certifi==2024.8.30
+      - cffi==1.17.1
       - charset-normalizer==3.4.0
       - click==8.1.7
+      - clr-loader==0.2.7.post0
       - colorama==0.4.6
       - comm==0.2.2
       - compress-pickle==2.1.0
@@ -122,8 +124,9 @@ dependencies:
       - parso==0.8.4
       - pexpect==4.9.0
       - pickleshare==0.7.5
+      - piconnect==0.12.1
       - pillow==11.0.0
-      - pip==24.3.1
+      - pip==25.1.1
       - pipreqs==0.5.0
       - platformdirs==4.3.6
       - plotly==5.24.1
@@ -141,14 +144,17 @@ dependencies:
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
       - pycodestyle==2.12.1
+      - pycparser==2.22
       - pyflakes==3.2.0
       - pygments==2.18.0
+      - pylucidio==2.4
       - pyoints==0.2.0a3
       - pyparsing==3.2.0
       - pyrsistent==0.20.0
       - pyserial==3.5
       - pytest==8.3.3
       - python-dateutil==2.9.0.post0
+      - pythonnet==3.0.5
       - pytz==2024.2
       - pyzbar==0.1.9
       - pyzmq==26.2.0
@@ -186,6 +192,7 @@ dependencies:
       - widgetsnbextension==4.0.13
       - wincertstore==0.2.1
       - wrapt==1.17.0
+      - xgboost==3.0.0
       - xlsxwriter==3.2.0
       - yarg==0.1.9
       - yoctopuce==2.0.62875
