--- a/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
+++ b/architecture/Windows-x86_64/py_env_gpu_conda_env_export.yml
@@ -430,6 +430,7 @@ dependencies:
       - werkzeug==3.1.3
       - wheel==0.45.1
       - wrapt==1.17.2
+      - xgboost==3.0.0
       - xlsxwriter==3.2.3
       - yarl==1.20.0
       - yoctopuce==2.1.5971
