--- a/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_bvm_conda_env_export.yml
@@ -25,176 +25,177 @@ dependencies:
   - pip:
       - ansi2html==1.9.2
       - arena-api==2.5.9
-      - asttokens==2.4.1
-      - attrs==24.2.0
-      - av==13.1.0
+      - asttokens==3.0.0
+      - attrs==25.3.0
+      - av==14.3.0
       - backcall==0.2.0
-      - beautifulsoup4==4.12.3
+      - beautifulsoup4==4.13.4
       - bleach==6.2.0
       - blinker==1.9.0
-      - braincube-connector==2.6.0
-      - cachetools==5.5.0
-      - certifi==2024.8.30
+      - braincube-connector==2.7.0
+      - cachetools==5.5.2
+      - certifi==2025.4.26
       - cffi==1.17.1
-      - charset-normalizer==3.4.0
-      - click==8.1.7
+      - charset-normalizer==3.4.2
+      - click==8.1.8
       - clr-loader==0.2.7.post0
       - colorama==0.4.6
       - comm==0.2.2
       - compress-pickle==2.1.0
       - configargparse==1.7
-      - contourpy==1.3.1
+      - contourpy==1.3.2
       - cycler==0.12.1
       - cylinder-fitting==1.1.4
-      - dash==2.18.2
+      - dash==3.0.4
       - dash-core-components==2.0.0
       - dash-html-components==2.0.0
       - dash-table==5.0.0
-      - debugpy==1.8.9
-      - decorator==5.1.1
+      - debugpy==1.8.14
+      - decorator==5.2.1
       - defusedxml==0.7.1
-      - deprecated==1.2.15
-      - dill==0.3.9
+      - deprecated==1.2.18
+      - dill==0.4.0
       - dnspython==2.7.0
       - docopt==0.6.2
       - email-validator==2.2.0
       - entrypoints==0.4
       - exceptiongroup==1.2.2
-      - executing==2.1.0
-      - fastjsonschema==2.20.0
-      - flake8==7.1.1
+      - executing==2.2.0
+      - fastjsonschema==2.21.1
+      - flake8==7.2.0
       - flask==3.0.3
-      - fonttools==4.55.0
-      - google-api-core==2.23.0
-      - google-auth==2.36.0
-      - google-cloud-bigquery==3.27.0
-      - google-cloud-core==2.4.1
-      - google-cloud-storage==2.18.2
-      - google-crc32c==1.6.0
+      - fonttools==4.57.0
+      - google-api-core==2.24.2
+      - google-auth==2.40.1
+      - google-cloud-bigquery==3.31.0
+      - google-cloud-core==2.4.3
+      - google-cloud-storage==3.1.0
+      - google-crc32c==1.7.1
       - google-resumable-media==2.7.2
-      - googleapis-common-protos==1.66.0
-      - grpcio==1.68.0
-      - grpcio-status==1.68.0
-      - h5py==3.12.1
+      - googleapis-common-protos==1.70.0
+      - grpcio==1.71.0
+      - grpcio-status==1.71.0
+      - h5py==3.13.0
       - idna==3.10
-      - imageio==2.36.0
+      - imageio==2.37.0
       - importlib-metadata==8.5.0
-      - importlib-resources==6.4.5
+      - importlib-resources==6.5.2
       - imutils==0.5.4
-      - iniconfig==2.0.0
+      - iniconfig==2.1.0
       - ipykernel==6.29.5
       - ipython==8.12.3
-      - ipywidgets==8.1.5
+      - ipywidgets==8.1.7
       - itsdangerous==2.2.0
       - jedi==0.19.2
-      - jinja2==3.1.4
-      - joblib==1.4.2
+      - jinja2==3.1.6
+      - joblib==1.5.0
       - jsonschema==4.23.0
-      - jsonschema-specifications==2024.10.1
+      - jsonschema-specifications==2025.4.1
       - jupyter-client==8.6.3
       - jupyter-core==5.7.2
       - jupyterlab-pygments==0.3.0
-      - jupyterlab-widgets==3.0.13
-      - kiwisolver==1.4.7
+      - jupyterlab-widgets==3.0.15
+      - kiwisolver==1.4.8
       - laspy==2.5.4
       - lazy-loader==0.4
-      - llvmlite==0.43.0
-      - lmdb==1.5.1
+      - llvmlite==0.44.0
+      - lmdb==1.6.2
       - markupsafe==3.0.2
-      - matplotlib==3.9.2
+      - matplotlib==3.10.1
       - matplotlib-inline==0.1.7
       - mccabe==0.7.0
-      - mistune==3.0.2
-      - nbclient==0.10.0
-      - nbconvert==7.16.4
+      - mistune==3.1.3
+      - narwhals==1.38.0
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
       - networkx==3.4.2
-      - numba==0.60.0
+      - numba==0.61.2
       - numpy==2.0.2
-      - opencv-contrib-python==4.10.0.84
-      - opencv-python==4.10.0.84
-      - opencv-python-headless==4.10.0.84
-      - opentelemetry-api==1.28.2
-      - opentelemetry-instrumentation==0.49b2
-      - opentelemetry-semantic-conventions==0.49b2
-      - packaging==24.2
+      - opencv-contrib-python==4.11.0.86
+      - opencv-python==4.11.0.86
+      - opencv-python-headless==4.11.0.86
+      - opentelemetry-api==1.32.1
+      - opentelemetry-instrumentation==0.53b1
+      - opentelemetry-semantic-conventions==0.53b1
+      - packaging==25.0
       - pandas==2.2.3
       - pandocfilters==1.5.1
       - parso==0.8.4
       - pexpect==4.9.0
       - pickleshare==0.7.5
-      - piconnect==0.12.1
-      - pillow==11.0.0
+      - piconnect==0.12.4
+      - pillow==11.2.1
       - pip==25.1.1
       - pipreqs==0.5.0
-      - platformdirs==4.3.6
-      - plotly==5.24.1
+      - platformdirs==4.3.7
+      - plotly==6.0.1
       - pluggy==1.5.0
       - plyfile==1.1
-      - polars==1.15.0
-      - prompt-toolkit==3.0.48
-      - proto-plus==1.25.0
-      - protobuf==5.28.3
-      - psutil==6.1.0
+      - polars==1.29.0
+      - prompt-toolkit==3.0.51
+      - proto-plus==1.26.1
+      - protobuf==5.29.4
+      - psutil==7.0.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
       - py-cylinder-fitting==1.0.0
-      - pyarrow==18.1.0
+      - pyarrow==20.0.0
       - pyasn1==0.6.1
-      - pyasn1-modules==0.4.1
-      - pycodestyle==2.12.1
+      - pyasn1-modules==0.4.2
+      - pycodestyle==2.13.0
       - pycparser==2.22
-      - pyflakes==3.2.0
-      - pygments==2.18.0
+      - pyflakes==3.3.2
+      - pygments==2.19.1
       - pylucidio==2.4
       - pyoints==0.2.0a3
-      - pyparsing==3.2.0
+      - pyparsing==3.2.3
       - pyrsistent==0.20.0
       - pyserial==3.5
-      - pytest==8.3.3
+      - pytest==8.3.5
       - python-dateutil==2.9.0.post0
       - pythonnet==3.0.5
-      - pytz==2024.2
+      - pytz==2025.2
       - pyzbar==0.1.9
-      - pyzmq==26.2.0
-      - referencing==0.35.1
+      - pyzmq==26.4.0
+      - referencing==0.36.2
       - requests==2.32.3
       - retrying==1.3.4
-      - rpds-py==0.21.0
-      - rsa==4.9
-      - ruff==0.8.0
-      - scikit-image==0.24.0
-      - scikit-learn==1.5.2
-      - scikit-spatial==8.0.0
-      - scipy==1.14.1
-      - setuptools==75.6.0
-      - shapely==2.0.6
-      - six==1.16.0
-      - soupsieve==2.6
+      - rpds-py==0.24.0
+      - rsa==4.9.1
+      - ruff==0.11.8
+      - scikit-image==0.25.2
+      - scikit-learn==1.6.1
+      - scikit-spatial==9.0.1
+      - scipy==1.15.2
+      - setuptools==80.3.1
+      - shapely==2.1.0
+      - six==1.17.0
+      - soupsieve==2.7
       - stack-data==0.6.3
-      - tenacity==9.0.0
-      - threadpoolctl==3.5.0
-      - tifffile==2024.9.20
+      - tenacity==9.1.2
+      - threadpoolctl==3.6.0
+      - tifffile==2025.3.30
       - tinycss2==1.4.0
       - tinyflux==1.0.0
       - tk==0.1.0
-      - tomli==2.1.0
+      - tomli==2.2.1
       - tornado==6.4.2
       - traitlets==5.14.3
-      - typing-extensions==4.12.2
-      - tzdata==2024.2
-      - urllib3==2.2.3
+      - typing-extensions==4.13.2
+      - tzdata==2025.2
+      - urllib3==2.4.0
       - wcwidth==0.2.13
       - webencodings==0.5.1
       - werkzeug==3.0.6
       - wheel==0.45.1
-      - widgetsnbextension==4.0.13
+      - widgetsnbextension==4.0.14
       - wincertstore==0.2.1
-      - wrapt==1.17.0
+      - wrapt==1.17.2
       - xgboost==3.0.0
-      - xlsxwriter==3.2.0
+      - xlsxwriter==3.2.3
       - yarg==0.1.9
-      - yoctopuce==2.0.62875
+      - yoctopuce==2.1.5971
       - zipp==3.21.0
 prefix: /home/nvidia/miniconda3/envs/py_env_bvm
