--- a/architecture/Linux-aarch64/py_env_nia_conda_env_export.yml
+++ b/architecture/Linux-aarch64/py_env_nia_conda_env_export.yml
@@ -4,22 +4,30 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=51_gnu
-  - bzip2=1.0.8=hfd63f10_2
-  - ca-certificates=2023.05.30=hd43f75c_0
-  - ld_impl_linux-aarch64=2.38=h8131f2d_1
-  - libffi=3.4.4=h419075a_0
+  - bzip2=1.0.8=h998d150_6
+  - ca-certificates=2025.2.25=hd43f75c_0
+  - expat=2.7.1=h419075a_0
+  - ld_impl_linux-aarch64=2.40=h48e3ba3_0
+  - libffi=3.4.4=h419075a_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h998d150_0
+  - libxcb=1.17.0=hf66535e_0
   - ncurses=6.4=h419075a_0
-  - openssl=3.0.10=h2f4d8fa_2
-  - python=3.10.12=h4bb2201_0
+  - openssl=3.0.16=h998d150_0
+  - pthread-stubs=0.3=hfd63f10_1
+  - python=3.12.11=h21bda81_0
   - readline=8.2=h998d150_0
-  - sqlite=3.41.2=h998d150_0
-  - tk=8.6.12=h241ca14_0
-  - xz=5.4.2=h998d150_0
-  - zlib=1.2.13=h998d150_0
+  - sqlite=3.45.3=h998d150_0
+  - tk=8.6.14=hb5ae6a8_1
+  - wheel=0.45.1=py312hd43f75c_0
+  - xorg-libx11=1.8.12=hf66535e_1
+  - xorg-libxau=1.0.12=hf66535e_0
+  - xorg-libxdmcp=1.1.5=hf66535e_0
+  - xorg-xorgproto=2024.1=h998d150_1
+  - xz=5.6.4=h998d150_1
+  - zlib=1.2.13=h998d150_1
   - pip:
       - aiobotocore==2.23.0
       - aiohappyeyeballs==2.6.1
@@ -27,7 +35,6 @@ dependencies:
       - aioitertools==0.12.0
       - aiosignal==1.4.0
       - anyio==4.9.0
-      - arena-api==2.5.9
       - argon2-cffi==25.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
@@ -64,8 +71,8 @@ dependencies:
       - fqdn==1.5.1
       - frozenlist==1.7.0
       - fsspec==2025.5.1
-      - google-api-core==2.19.1
-      - google-api-python-client==2.154.0
+      - google-api-core==2.25.1
+      - google-api-python-client==2.176.0
       - google-auth==2.40.3
       - google-auth-httplib2==0.2.0
       - google-cloud-bigquery==3.34.0
@@ -75,9 +82,9 @@ dependencies:
       - google-resumable-media==2.7.2
       - googleapis-common-protos==1.70.0
       - grpcio==1.73.1
-      - grpcio-status==1.71.2
-      - h11==0.14.0
-      - httpcore==1.0.5
+      - grpcio-status==1.73.1
+      - h11==0.16.0
+      - httpcore==1.0.9
       - httplib2==0.22.0
       - httpx==0.28.1
       - idna==3.10
@@ -85,7 +92,8 @@ dependencies:
       - importlib-metadata==8.7.0
       - iniconfig==2.1.0
       - ipykernel==6.29.5
-      - ipython==8.37.0
+      - ipython==9.4.0
+      - ipython-pygments-lexers==1.1.1
       - isoduration==20.11.0
       - jedi==0.19.2
       - jinja2==3.1.6
@@ -96,7 +104,7 @@ dependencies:
       - jsonschema==4.24.0
       - jsonschema-specifications==2025.4.1
       - jupyter-client==8.6.3
-      - jupyter-core==5.3.1
+      - jupyter-core==5.8.1
       - jupyter-events==0.12.0
       - jupyter-lsp==2.2.5
       - jupyter-server==2.16.0
@@ -116,7 +124,7 @@ dependencies:
       - nbconvert==7.16.6
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.4.2
+      - networkx==3.5
       - notebook-shim==0.2.4
       - numpy==2.2.6
       - opencv-contrib-python==4.12.0.88
@@ -139,7 +147,7 @@ dependencies:
       - prompt-toolkit==3.0.51
       - propcache==0.3.2
       - proto-plus==1.26.1
-      - protobuf==5.29.5
+      - protobuf==6.31.1
       - psutil==7.0.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
@@ -155,7 +163,7 @@ dependencies:
       - pyqt6-sip==13.10.2
       - pyqtree==1.0.0
       - pyrsistent==0.20.0
-      - python-dateutil==2.9.0
+      - python-dateutil==2.9.0.post0
       - python-json-logger==3.3.0
       - pytz==2025.2
       - pywavelets==1.8.0
@@ -173,7 +181,7 @@ dependencies:
       - s3fs==2025.5.1
       - scikit-image==0.25.2
       - scikit-learn==1.7.0
-      - scipy==1.15.3
+      - scipy==1.16.0
       - send2trash==1.8.3
       - setuptools==80.9.0
       - sip==6.12.0
@@ -183,7 +191,7 @@ dependencies:
       - stack-data==0.6.3
       - terminado==0.18.1
       - threadpoolctl==3.6.0
-      - tifffile==2025.5.10
+      - tifffile==2025.6.11
       - tinycss2==1.4.0
       - tomli==2.2.1
       - tornado==6.5.1
@@ -198,11 +206,10 @@ dependencies:
       - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - wheel==0.45.1
       - wrapt==1.17.2
       - xlsxwriter==3.2.5
       - yarg==0.1.10
       - yarl==1.20.1
       - yoctopuce==2.1.6320
       - zipp==3.23.0
-prefix: /home/nia/Miniconda3/envs/py_env_nia
+prefix: /home/nia/miniconda3/envs/py_env_nia
